--- a/src/assets/sass/main.css
+++ b/src/assets/sass/main.css
@@ -393,6 +393,9 @@ body {
   color: #4b6a9b;
   min-width: 50%;
   margin-bottom: 1.9rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 @media screen and (max-width: 500px) {
